--- a/index.html
+++ b/index.html
@@ -10,36 +10,24 @@
     <body>
         <h1>Art 321 Home Page - Evan Argenal</h1>
 
-        <div id="grid">
-            <div id="cells">
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 1</a>
-            </div>
-            <div id="cells">
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 2</a>
-            </div>
-            <div id="cells">
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 3</a>
-            </div>
-            <div id="cells">
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 4</a>
-            </div>
-            <div id="cells">
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 5</a>
-            </div>
-            <div id="cells">
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 6</a>
-            </div>
-            <div id="cells">
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 7</a>
-            </div>
-            <div id="cells">
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 8</a>
-            </div>
-            <div id="cells">
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 9</a>
-            </div>
-            
-
+        <div id="maingrid">
+            <a href="a1.html">Assignment 1</a>
+            <br>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 2</a>
+            <br>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 3</a>
+            <br>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 4</a>
+            <br>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 5</a>
+            <br>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 6</a>
+            <br>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 7</a>
+            <br>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 8</a>
+            <br>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 9</a>
         </div>
     </body>
 </html>
