Added navigation bar and start of assignment 1

--- a/a1.html
+++ b/a1.html
@@ -2,11 +2,25 @@
 
 <html lang="en">
     <head>
-        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link rel="stylesheet" type="text/css" href="a1Style.css"/>
         <title>
             Evan's Art 321 Assignment 1
         </title>
     </head>
+    <header>
+        <div id="topbar">
+            <a href="index.html">Home</a>
+            <a href="a1.html">A1</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A2</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A3</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A4</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A5</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A6</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A7</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A8</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A9</a>
+        </div>
+    </header>
     <body>
         <h1>Art 321 Evan Argenal - Assignment 1 Solution</h1>
     </body>
