--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 
 <html lang="en">
     <head>
-        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link rel="stylesheet" type="text/css" href="indexStyle.css"/>
         <title>
             Evan's Art 321 Home Page
         </title>
     </head>
     <body>
-        <h1>Art 321 Home Page - Evan Argenal</h1>
-
         <div id="maingrid">
+            <h1>Art 321 Home Page - Evan Argenal</h1>
             <a href="a1.html">Assignment 1</a>
             <br>
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 2</a>
