finished a1 and added image to homepage

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 8</a>
             <br>
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 9</a>
+            <br> <br>
+            <img src="pictures/meltyface.gif">
         </div>
     </body>
 </html>
