--- a/a1.html
+++ b/a1.html
@@ -44,16 +44,39 @@
                 digitally printed glass and LED lighting, bringing a European perceptive to the city landscape.
             </p>
             <hr> <br>
+            <img src="pictures/spin.jpg">
+            <br>
+            <a id="link" href="https://www.youtube.com/watch?v=sAR7sLA9pBg&feature=emb_title" target="_blank">Spin, 2006-2012</a>
+            <br>
+            <p>
+                Spin is a digital generative process based on the endless concentric proliferation of thousands of rotating circles which build up hypnotic structures. 
+                The more they spin, the more they multiply and at a certain point, they become more and more chaotic and finally end up in a vacuum, a vortex, a void image. 
+                Then another proliferation cycle of spinning circles starts again. This loop process is potentiality endless.
+            </p>
+            <hr> <br>
             <img src="pictures/metagoogle.jpg">
             <br>
-            <a id="link" href="https://www.youtube.com/watch?v=uLsaWuwsCGc&feature=emb_title">Meta-Google, 2015-2018</a>
+            <a id="link" href="https://www.youtube.com/watch?v=uLsaWuwsCGc&feature=emb_title" target="_blank">Meta-Google, 2015-2018</a>
             <br>
             <p>
                 Meta-Google confronts William Burroughs’ artistic heritage with Google, the symbol company of today’s soft global digital capitalism, 
                 in order to question our relationship with pictorial digital proliferation. <br>
                 This Meta-Google series tends to create a mirror-image of its own disappearance, a meta-image that conveys the feeling that behind each
-                image there is something that is about to disappear. Hence, an echo to Burroughs’ iconoclasm: <br>
+                image there is something that is about to disappear. Hence, an echo to Burroughs’ iconoclasm: <br> <br>
                 <i>Rub out the word, word begets image, image is Virus.</i>
+            </p>
+            <hr> <br>
+            <img src="pictures/theEndsOfPainting.jpg">
+            <br>
+            <a id="link" href="https://www.youtube.com/watch?v=wTIj6udRY7I&feature=emb_title" target="_blank">The Ends of Painting, 2018-2020</a>
+            <br>
+            <p>
+                <i>As from today, painting is dead.</i> <br> <br>
+                This sentence was pronounced nearly two centuries ago, in 1839, by the painter Paul Delaroche when he discovered early photographs 
+                marking the obsolescence of painting in such a context. <br>
+                This infinite video flux, without any beginning or end, is projected on 3 vertical screens, red, yellow and blue, echoing Rodchenko's triptych.
+                The installation addresses the issue of ends that never end with the approach of an apocalypse already behind us. <br> <br>
+                <i>Everything has always already started and everything is always coming to an end</i>
             </p>
         </div>
     </body>
