Added framework for Assignment 2 and cleaned up file system

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Art 321 Home Page - Evan Argenal</h1>
             <a href="a1.html">Assignment 1</a>
             <br>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 2</a>
+            <a href="a2.html">Assignment 2</a>
             <br>
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 3</a>
             <br>
