--- a/a1.html
+++ b/a1.html
@@ -11,7 +11,7 @@
         <div id="topbar">
             <a id="navItem" href="index.html">Home</a>
             <a id="navItem" href="a1.html">A1</a>
-            <a id="navItem" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A2</a>
+            <a id="navItem" href="a2.html">A2</a>
             <a id="navItem" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A3</a>
             <a id="navItem" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A4</a>
             <a id="navItem" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A5</a>
@@ -44,7 +44,7 @@
                 digitally printed glass and LED lighting, bringing a European perceptive to the city landscape.
             </p>
             <hr> <br>
-            <img src="pictures/spin.jpg">
+            <img src="a1/spin.jpg">
             <br>
             <a id="link" href="https://www.youtube.com/watch?v=sAR7sLA9pBg&feature=emb_title" target="_blank">Spin, 2006-2012</a>
             <br>
@@ -54,7 +54,7 @@
                 Then another proliferation cycle of spinning circles starts again. This loop process is potentiality endless.
             </p>
             <hr> <br>
-            <img src="pictures/metagoogle.jpg">
+            <img src="a1/metagoogle.jpg">
             <br>
             <a id="link" href="https://www.youtube.com/watch?v=uLsaWuwsCGc&feature=emb_title" target="_blank">Meta-Google, 2015-2018</a>
             <br>
@@ -66,7 +66,7 @@
                 <i>Rub out the word, word begets image, image is Virus.</i>
             </p>
             <hr> <br>
-            <img src="pictures/theEndsOfPainting.jpg">
+            <img src="a1/theEndsOfPainting.jpg">
             <br>
             <a id="link" href="https://www.youtube.com/watch?v=wTIj6udRY7I&feature=emb_title" target="_blank">The Ends of Painting, 2018-2020</a>
             <br>
