--- a/a1.html
+++ b/a1.html
@@ -12,7 +12,7 @@
             <a id="navItem" href="index.html">Home</a>
             <a id="navItem" href="a1.html">A1</a>
             <a id="navItem" href="a2.html">A2</a>
-            <a id="navItem" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A3</a>
+            <a id="navItem" href="a3.html">A3</a>
             <a id="navItem" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A4</a>
             <a id="navItem" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A5</a>
             <a id="navItem" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A6</a>
