--- a/a2.html
+++ b/a2.html
@@ -4,7 +4,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="a2Style.css"/>
         <title>
-            Evan's Art 321 Assignment 1
+            Evan's Art 321 Assignment 2
         </title>
     </head>
     <header>
@@ -12,7 +12,7 @@
             <a id="navItem" href="index.html">Home</a>
             <a id="navItem" href="a1.html">A1</a>
             <a id="navItem" href="a2.html">A2</a>
-            <a id="navItem" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A3</a>
+            <a id="navItem" href="a3.html">A3</a>
             <a id="navItem" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A4</a>
             <a id="navItem" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A5</a>
             <a id="navItem" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A6</a>
