--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <br>
             <a href="a2.html">Assignment 2</a>
             <br>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 3</a>
+            <a href="a3.html">Assignment 3</a>
             <br>
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 4</a>
             <br>
