Added templates for all assignments

--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
             <br>
             <a href="a3.html">Assignment 3</a>
             <br>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 4</a>
+            <a href="a4.html">Assignment 4</a>
             <br>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 5</a>
+            <a href="a5.html">Assignment 5</a>
             <br>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 6</a>
+            <a href="a6.html">Assignment 6</a>
             <br>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 7</a>
+            <a href="a7.html">Assignment 7</a>
             <br>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 8</a>
+            <a href="a8.html">Assignment 8</a>
             <br>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Assignment 9</a>
+            <a href="a9.html">Assignment 9</a>
             <br> <br>
             <img src="pictures/meltyface.gif">
         </div>
