--- a/a1.html
+++ b/a1.html
@@ -13,12 +13,12 @@
             <a id="navItem" href="a1.html">A1</a>
             <a id="navItem" href="a2.html">A2</a>
             <a id="navItem" href="a3.html">A3</a>
-            <a id="navItem" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A4</a>
-            <a id="navItem" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A5</a>
-            <a id="navItem" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A6</a>
-            <a id="navItem" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A7</a>
-            <a id="navItem" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A8</a>
-            <a id="navItem" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">A9</a>
+            <a id="navItem" href="a4.html">A4</a>
+            <a id="navItem" href="a5.html">A5</a>
+            <a id="navItem" href="a6.html">A6</a>
+            <a id="navItem" href="a7.html">A7</a>
+            <a id="navItem" href="a8.html">A8</a>
+            <a id="navItem" href="a9.html">A9</a>
         </div>
     </header>
     <body>
