Assignment 4 is finished and submitted

--- a/a4.html
+++ b/a4.html
@@ -25,6 +25,37 @@
         <div id="maingrid">
             <h1>Art 321 Evan Argenal - Assignment 4 Solution</h1>
             <br>
+            <h1>My Animation</h1>
+            <img src="a4/animation.gif">
+            <br> <br> <hr>
+            <h1>What is this?</h1>
+            <p>
+                My animation was made using Pivot Stick Figure Animator 4. <br> <br>
+                I wanted to highlight complex interaction between elements which I did by making the elephant interact with the stick figures.
+                Some of the biggest challenges I faced while making this animation was making the walking animation of the stick figures and the elephant
+                appear natural, and making sure that each frame had multiple objects moving when there was more than 2 objects on the screen. <br>
+                By having each object on the screen move at the same time, it adds more realism and makes the animation appear "smoother" <br> <br>
+                Another issue I faced was exporting my animation as a gif. My animation is 15+ seconds long. It takes an absurd amount of storage space to make 
+                a gif that long, so I had to downscale the quality a bit by adding some noise so I could fit my entire animation into one gif. 
+                The resulting gif has fairly good quality, and the noise isn't too obvious, which I am happy with. <br> <br>
+                Something worth mentioning is my animation runs at 15FPS (frames per second) which I found to be the sweet spot between complexity and smoothness.
+            </p>
+            <br> <hr>
+            <h1>Sources</h1>
+            <h2>Background Image and Sample Animation Frames</h2>
+            <p>
+                Here is the background image I used:
+            </p>
+            <img src="a4/animationWallpaper.jpg">
+            <br> <br> <br>
+            <p>
+                Here are some sample animation frames of when I was animating it in Pivot Animator 4:
+            </p>
+            <img src="a4/sampleFrame1.png">
+            <br> <br> <br>
+            <img src="a4/sampleFrame2.png">
+            <br> <br> <br>
+            <img src="a4/sampleFrame3.png">
         </div>
     </body>
 </html>
