--- a/a5.html
+++ b/a5.html
@@ -25,6 +25,40 @@
         <div id="maingrid">
             <h1>Art 321 Evan Argenal - Assignment 5 Solution</h1>
             <br>
+            <h1>Radio Program</h1>
+            <p>
+                Our group created a radio program using "The Tooth Fairy" script that was provided. <br>
+                Our radio program was edited using Adobe Premiere Pro. <br> <br>
+                The group members and their roles were: <br>
+                Evan Argenal - Narrator and The tooth fairy, aka Mr. Snookers <br>
+                Rulan Lu - Intro Person 1 and Dr. Armadingo <br>
+                Libi Kizer - Nurse Dirkin <br>
+            </p>
+            <audio controls>
+                <source src="a5/radioProgram.mp3" type="audio/mpeg">
+                Your browser does not support the audio tag.
+              </audio>
+            <br> <br> <hr>
+            <h1>Sources and References</h1>
+            <h2>"The Tooth Fairy" Script</h2>
+            <a id="link" href="https://people.ucalgary.ca/~jparker/art321/assignments/toothFairy.txt" target="_blank">Script</a>
+            <br>
+            <h2>Sound Effects and Music Sources</h2>
+            <a id="link" href="https://freesound.org/people/JohnsonBrandEditing/sounds/244310/" target="_blank">Steps On A Sidewalk</a>
+            <br>
+            <a id="link" href="https://freesound.org/people/SubwaySandwitch420/sounds/540770/" target="_blank">Door Knocking</a>
+            <br>
+            <a id="link" href="https://freesound.org/people/angelkunev/sounds/519065/" target="_blank">Door Opening</a>
+            <br>
+            <a id="link" href="https://freesound.org/people/wjtaylor/sounds/266682/" target="_blank">Door Closing</a>
+            <br>
+            <a id="link" href="https://freesound.org/people/smmassuda/sounds/136629/" target="_blank">Assorted Bangs And Crashes</a>
+            <br>
+            <a id="link" href="https://freesound.org/people/SpliceSound/sounds/150441/" target="_blank">Buzz Of Intercom</a>
+            <br>
+            <a id="link" href="https://freesound.org/people/elveto/sounds/87574/" target="_blank">Hang Up</a>
+            <br>
+            <a id="link" href="https://freesound.org/people/Deatlev/sounds/257413/" target="_blank">Music</a>
         </div>
     </body>
 </html>
