Uploaded finished assignment 6

--- a/a6.html
+++ b/a6.html
@@ -25,6 +25,53 @@
         <div id="maingrid">
             <h1>Art 321 Evan Argenal - Assignment 6 Solution</h1>
             <br>
+            <h1>Question 1</h1>
+            <div id="question">
+                <img src="a6/q1Code.jpg">
+                <img src="a6/arrow.png" id="arrow">
+                <img src="a6/q1Image.png">
+            </div>
+            <a id="link" href="https://blockly.games/turtle?lang=en&level=10#ytwgpw" target="_blank">Link To Blockly (Question 1)</a>
+            <br> <br> <hr> <br>
+            <h1>Question 2</h1>
+            <div id="question">
+                <img src="a6/q2Code.jpg">
+                <img src="a6/arrow.png" id="arrow">
+                <img src="a6/q2Image.png">
+            </div>
+            <a id="link" href="https://blockly.games/turtle?lang=en&level=10#47cqii" target="_blank">Link To Blockly (Question 2)</a>
+            <br> <br> <hr> <br>
+            <h1>Question 3</h1>
+            <div id="question">
+                <img src="a6/q3Code.jpg">
+                <img src="a6/arrow.png" id="arrow">
+                <img src="a6/q3Image.png">
+            </div>
+            <a id="link" href="https://blockly.games/turtle?lang=en&level=10#tzcumu" target="_blank">Link To Blockly (Question 3)</a>
+            <br> <br> <hr> <br>
+            <h1>Question 4</h1>
+            <div id="question">
+                <img src="a6/q4Code.jpg">
+                <img src="a6/arrow.png" id="arrow">
+                <img src="a6/q4Image.png">
+            </div>
+            <a id="link" href="https://blockly.games/turtle?lang=en&level=10#jvrwkc" target="_blank">Link To Blockly (Question 4)</a>
+            <br> <br> <hr> <br>
+            <h1>Question 5</h1>
+            <div id="question">
+                <img src="a6/q5Code.jpg">
+                <img src="a6/arrow.png" id="arrow">
+                <img src="a6/q5Image.png">
+            </div>
+            <a id="link" href="https://blockly.games/turtle?lang=en&level=10#w99eyy" target="_blank">Link To Blockly (Question 5)</a>
+            <br> <br> <hr> <br>
+            <h1>Question 6</h1>
+            <div id="question">
+                <img src="a6/q6Code.jpg">
+                <img src="a6/arrow.png" id="arrow">
+                <img src="a6/q6Image.png">
+            </div>
+            <a id="link" href="https://blockly.games/turtle?lang=en&level=10#39ui8d" target="_blank">Link To Blockly (Question 6)</a>
         </div>
     </body>
 </html>
