Added what the question was for assignment 6

--- a/a6.html
+++ b/a6.html
@@ -26,6 +26,10 @@
             <h1>Art 321 Evan Argenal - Assignment 6 Solution</h1>
             <br>
             <h1>Question 1</h1>
+            <br>
+            <p>
+                Draw a "+" figure 150 units high by 150 units wide.
+            </p>
             <div id="question">
                 <img src="a6/q1Code.jpg">
                 <img src="a6/arrow.png" id="arrow">
@@ -34,6 +38,10 @@
             <a id="link" href="https://blockly.games/turtle?lang=en&level=10#ytwgpw" target="_blank">Link To Blockly (Question 1)</a>
             <br> <br> <hr> <br>
             <h1>Question 2</h1>
+            <br>
+            <p>
+                Draw the letter 'W'. (Bonus marks: draw the word "WHY")
+            </p>
             <div id="question">
                 <img src="a6/q2Code.jpg">
                 <img src="a6/arrow.png" id="arrow">
@@ -42,6 +50,10 @@
             <a id="link" href="https://blockly.games/turtle?lang=en&level=10#47cqii" target="_blank">Link To Blockly (Question 2)</a>
             <br> <br> <hr> <br>
             <h1>Question 3</h1>
+            <br>
+            <p>
+                Draw 5 parallel horizontal lines 400 units long separated by 25 units.
+            </p>
             <div id="question">
                 <img src="a6/q3Code.jpg">
                 <img src="a6/arrow.png" id="arrow">
@@ -50,6 +62,13 @@
             <a id="link" href="https://blockly.games/turtle?lang=en&level=10#tzcumu" target="_blank">Link To Blockly (Question 3)</a>
             <br> <br> <hr> <br>
             <h1>Question 4</h1>
+            <br>
+            <p>
+                Use turtle graphics to draw a sequence of squares (100 units per side) <br>
+                that have a common lower left corner, but are each drawn at a <br>
+                different angle. There should be at least 10 squares in the sequence.
+
+            </p>
             <div id="question">
                 <img src="a6/q4Code.jpg">
                 <img src="a6/arrow.png" id="arrow">
@@ -58,6 +77,12 @@
             <a id="link" href="https://blockly.games/turtle?lang=en&level=10#jvrwkc" target="_blank">Link To Blockly (Question 4)</a>
             <br> <br> <hr> <br>
             <h1>Question 5</h1>
+            <br>
+            <p>
+                Draw a set of 9 squares in a 3x3 arrangement. Draw one in each of the <br>
+                colours: black, yellow, green, red, blue, purple, grey, orange, and a <br>
+                colour of your choosing.
+            </p>
             <div id="question">
                 <img src="a6/q5Code.jpg">
                 <img src="a6/arrow.png" id="arrow">
@@ -66,6 +91,10 @@
             <a id="link" href="https://blockly.games/turtle?lang=en&level=10#w99eyy" target="_blank">Link To Blockly (Question 5)</a>
             <br> <br> <hr> <br>
             <h1>Question 6</h1>
+            <br>
+            <p>
+                Draw a circle.
+            </p>
             <div id="question">
                 <img src="a6/q6Code.jpg">
                 <img src="a6/arrow.png" id="arrow">
