Uploaded and finalized assignment 7

--- a/a7.html
+++ b/a7.html
@@ -25,6 +25,22 @@
         <div id="maingrid">
             <h1>Art 321 Evan Argenal - Assignment 7 Solution</h1>
             <br>
+            <h1>Capture and Edit a Video</h1>
+            <p>
+                My video was captured using my iPhone 12 Pro Max, and edited using Adobe Premiere Pro.
+            </p>
+            <br>
+            <video width="1024" height="576" controls>
+                <source src="a7/Assignment7.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <br> <br> <hr>
+            <h1>Sources and References</h1>
+            <h2>Script and Resources</h2>
+            <a id="link" href="https://people.ucalgary.ca/~jparker/art321/assignments/assignment7a.htm" target="_blank">Assignment Description</a>
+            <br>
+            <h2>Music Sources</h2>
+            <a id="link" href="https://soundcloud.com/lukrembo/jam" target="_blank">Jam (Prod. by Lukrembo)</a>
         </div>
     </body>
 </html>
