Removed assignment 9 and replaced it with final project

--- a/a8.html
+++ b/a8.html
@@ -18,12 +18,12 @@
             <a id="navItem" href="a6.html">A6</a>
             <a id="navItem" href="a7.html">A7</a>
             <a id="navItem" href="a8.html">A8</a>
-            <a id="navItem" href="a9.html">A9</a>
+            <a id="navItem" href="project.html">Final Project</a>
         </div>
     </header>
     <body>
         <div id="maingrid">
-            <h1>Art 321 Evan Argenal - Assignment 8 Solution</h1>
+            <h1>Art 321 Evan Argenal - Assignment 8a Solution</h1>
             <br>
         </div>
     </body>
