--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <br>
             <a href="a8.html">Assignment 8</a>
             <br>
-            <a href="a9.html">Assignment 9</a>
+            <a href="project.html">Final Project</a>
             <br> <br>
             <img src="pictures/meltyface.gif">
         </div>
