--- a/a5.html
+++ b/a5.html
@@ -18,7 +18,7 @@
             <a id="navItem" href="a6.html">A6</a>
             <a id="navItem" href="a7.html">A7</a>
             <a id="navItem" href="a8.html">A8</a>
-            <a id="navItem" href="a9.html">A9</a>
+            <a id="navItem" href="project.html">Final Project</a>
         </div>
     </header>
     <body>
