--- a/project.html
+++ b/project.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <link rel="stylesheet" type="text/css" href="a9Style.css"/>
+        <link rel="stylesheet" type="text/css" href="projectStyle.css"/>
         <title>
             Evan's Art 321 Assignment 9
         </title>
@@ -18,13 +18,14 @@
             <a id="navItem" href="a6.html">A6</a>
             <a id="navItem" href="a7.html">A7</a>
             <a id="navItem" href="a8.html">A8</a>
-            <a id="navItem" href="a9.html">A9</a>
+            <a id="navItem" href="project.html">Final Project</a>
         </div>
     </header>
     <body>
         <div id="maingrid">
-            <h1>Art 321 Evan Argenal - Assignment 9 Solution</h1>
+            <h1>Art 321 Evan Argenal - Final Project</h1>
             <br>
+            <h1>Turtle Chase</h1>
         </div>
     </body>
 </html>
