Uploaded final project

--- a/project.html
+++ b/project.html
@@ -26,6 +26,18 @@
             <h1>Art 321 Evan Argenal - Final Project</h1>
             <br>
             <h1>Turtle Chase</h1>
+            <iframe src="https://trinket.io/embed/python/6d9b5b4191?toggleCode=true&start=result" width="100%" height="755" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+            <br>
+            <p>
+                For my final project, I created a simple game in Python using Turtle graphics. <br>
+                The goal of the game is to catch the orange turtle which can be achieved by getting at least within 30 units of eachother. <br>
+                I was able to embed the Python code/game into my website using trinket.io <br> <br>
+                Controls: <br>
+                "w" = Move Up <br>
+                "a" = Move Left <br>
+                "d" = Move Right <br>
+                "s" = Move Down <br>
+            </p>
         </div>
     </body>
 </html>
